@@ -92,6 +92,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5536: urllib.urlretrieve makes sure to close the file it's writing to
+  even if an exception occurs.
+
 - Fix Decimal.__format__ bug that swapped the meanings of the '<' and
   '>' alignment characters.
 
